[gd_scene load_steps=22 format=3 uid="uid://uwei5ptlvsos"]

[ext_resource type="PackedScene" uid="uid://cxhk6xhyql0dg" path="res://MisarableOverdose/models_and_textures/shotgun.glb" id="1_itnne"]
[ext_resource type="Script" uid="uid://lj6e2s2kqf55" path="res://fucking_shotgun_kill_mee_plz.gd" id="2_cq1sh"]
[ext_resource type="Texture2D" uid="uid://6v3mqjjboirh" path="res://MisarableOverdose/models_and_textures/MuzzleFlash.png" id="3_avm4x"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_avm4x"]
animation = &"idle_sg"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cq1sh"]
animation = &"povorot_sg"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ao52f"]
animation = &"povorot_sg"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_utk6n"]
animation = &"run_sg"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ud3c8"]
animation = &"shoot_sg"

[sub_resource type="Curve" id="Curve_ud3c8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.636704, 0.309375), 1.75464, 1.75464, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_avm4x"]
xfade_time = 0.8
xfade_curve = SubResource("Curve_ud3c8")

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m1p8q"]
advance_mode = 2

[sub_resource type="Curve" id="Curve_avm4x"]
_data = [Vector2(0, 0.0249999), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cq1sh"]
xfade_curve = SubResource("Curve_avm4x")

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cgbq8"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6rnmr"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_le6w7"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cixqf"]
xfade_time = 0.1

[sub_resource type="Curve" id="Curve_utk6n"]
_data = [Vector2(0.00749063, 0), 0.0, 0.0, 0, 0, Vector2(0.782772, 0.502344), 2.37275, 2.37275, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_utk6n"]
xfade_time = 0.8
xfade_curve = SubResource("Curve_utk6n")

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0p7dk"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o28bo"]
states/End/position = Vector2(899, 98)
states/Start/position = Vector2(193, 24)
states/idle_sg/node = SubResource("AnimationNodeAnimation_avm4x")
states/idle_sg/position = Vector2(441, -39)
"states/povorot_sg 2/node" = SubResource("AnimationNodeAnimation_cq1sh")
"states/povorot_sg 2/position" = Vector2(385, 59)
"states/povorot_sg 3/node" = SubResource("AnimationNodeAnimation_ao52f")
"states/povorot_sg 3/position" = Vector2(518, 59)
states/run_sg/node = SubResource("AnimationNodeAnimation_utk6n")
states/run_sg/position = Vector2(441, 157)
states/shoot_sg/node = SubResource("AnimationNodeAnimation_ud3c8")
states/shoot_sg/position = Vector2(716, 24)
transitions = ["shoot_sg", "idle_sg", SubResource("AnimationNodeStateMachineTransition_avm4x"), "Start", "idle_sg", SubResource("AnimationNodeStateMachineTransition_m1p8q"), "idle_sg", "shoot_sg", SubResource("AnimationNodeStateMachineTransition_cq1sh"), "idle_sg", "povorot_sg 2", SubResource("AnimationNodeStateMachineTransition_cgbq8"), "povorot_sg 2", "run_sg", SubResource("AnimationNodeStateMachineTransition_6rnmr"), "run_sg", "povorot_sg 3", SubResource("AnimationNodeStateMachineTransition_le6w7"), "povorot_sg 3", "idle_sg", SubResource("AnimationNodeStateMachineTransition_cixqf"), "shoot_sg", "run_sg", SubResource("AnimationNodeStateMachineTransition_utk6n"), "run_sg", "shoot_sg", SubResource("AnimationNodeStateMachineTransition_0p7dk")]
graph_offset = Vector2(-35, -63)

[node name="shotgun" instance=ExtResource("1_itnne")]
script = ExtResource("2_cq1sh")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(-1.85718, -5.08788, 0.384985)
bones/0/rotation = Quaternion(0.0552854, 0.831599, -0.0414562, 0.551061)
bones/1/rotation = Quaternion(0.16855, -0.0399092, 0.246096, 0.953643)
bones/2/rotation = Quaternion(0.118725, -0.00503394, -0.226923, 0.966636)
bones/2/scale = Vector3(0.999006, 0.941236, 0.999994)
bones/3/rotation = Quaternion(0.351462, 0.0780068, 0.0706474, 0.930268)
bones/4/rotation = Quaternion(0.621943, 0.32963, 0.159304, 0.692209)
bones/5/rotation = Quaternion(0.0831928, -0.327198, 0.0429687, 0.940305)
bones/6/rotation = Quaternion(-0.0412961, 0.239162, -0.0476819, 0.968929)
bones/7/rotation = Quaternion(0.1791, -0.0073672, 0.0645182, 0.981686)
bones/8/rotation = Quaternion(0.0153615, 0.00453175, -0.0607777, 0.998023)
bones/8/scale = Vector3(0.999998, 0.94072, 0.999489)
bones/9/rotation = Quaternion(0.473342, 0.0796076, 0.181581, 0.858276)
bones/10/rotation = Quaternion(0.467787, 0.175557, 0.05974, 0.864168)
bones/11/rotation = Quaternion(0.247139, -0.129447, -0.0249512, 0.959971)
bones/12/rotation = Quaternion(0.143312, 0.0713293, 0.0275855, 0.986718)
bones/13/rotation = Quaternion(0.10337, 0.016937, -0.204413, 0.973264)
bones/14/rotation = Quaternion(0.0371096, 0.0368906, 0.25922, 0.9644)
bones/14/scale = Vector3(0.999818, 0.94091, 0.99949)
bones/15/rotation = Quaternion(0.177715, 0.0231039, 0.0770932, 0.980786)
bones/16/rotation = Quaternion(0.420352, 0.0997547, 0.164113, 0.886803)
bones/17/rotation = Quaternion(0.390864, 0.236531, 0.120721, 0.881309)
bones/18/rotation = Quaternion(0.340911, 0.0570327, 0.2609, 0.901365)
bones/19/rotation = Quaternion(0.0977501, 0.0376443, -0.398436, 0.911195)
bones/20/rotation = Quaternion(-0.0437445, 0.022778, 0.447586, 0.89288)
bones/20/scale = Vector3(0.999528, 0.94078, 0.999902)
bones/21/rotation = Quaternion(0.0367814, -0.0136516, -0.0155944, 0.999108)
bones/22/rotation = Quaternion(0.14815, -0.294218, 0.143736, 0.933181)
bones/23/rotation = Quaternion(-0.00944553, -0.0193563, -0.0082583, 0.999734)
bones/24/rotation = Quaternion(0.151969, -0.0936383, -0.0253762, 0.983612)
bones/25/position = Vector3(0.285193, 2.66335, 0.298387)
bones/25/rotation = Quaternion(0.228711, -0.0923105, -0.263581, 0.932574)
bones/26/rotation = Quaternion(0.129593, 0.0979781, 0.248497, 0.954911)
bones/27/position = Vector3(0.200041, 2.48525, 0.174873)
bones/27/rotation = Quaternion(0.00405126, -0.249333, -0.0363291, 0.967728)
bones/27/scale = Vector3(1.01041, 1.42858, 1)
bones/28/position = Vector3(0.19562, -3.50904, 0.235753)
bones/28/rotation = Quaternion(0.176487, -0.928211, 0.0631396, 0.321388)
bones/29/rotation = Quaternion(-0.115873, -0.83929, -0.212682, 0.486756)
bones/30/rotation = Quaternion(0.203901, 0.607609, 0.0610699, 0.765183)
bones/30/scale = Vector3(0.999006, 0.941236, 0.999994)
bones/31/rotation = Quaternion(0.0807486, 0.164449, 0.022723, 0.982812)
bones/32/rotation = Quaternion(-0.0695964, 0.209611, 0.0309916, 0.974812)
bones/33/rotation = Quaternion(0.165688, -0.0418711, 0.0876339, 0.981384)
bones/34/rotation = Quaternion(0.166026, -0.0309197, 0.0829486, 0.98214)
bones/35/rotation = Quaternion(0.00825765, -0.36583, -0.0669992, 0.92823)
bones/36/rotation = Quaternion(0.0416424, 0.301065, 0.0780856, 0.949489)
bones/36/scale = Vector3(0.999997, 0.94072, 0.999489)
bones/37/rotation = Quaternion(0.0483994, 0.0660711, 0.02758, 0.996259)
bones/38/rotation = Quaternion(0.0374456, 0.0559243, 0.028535, 0.997324)
bones/39/rotation = Quaternion(0.039312, -0.0923272, -0.0113281, 0.994888)
bones/40/rotation = Quaternion(0.0356986, 0.0587308, 0.024159, 0.997343)
bones/41/rotation = Quaternion(-0.0908738, 0.554617, 0.133742, 0.816244)
bones/42/rotation = Quaternion(0.0800816, -0.457468, -0.101931, 0.879727)
bones/42/scale = Vector3(0.999818, 0.94091, 0.99949)
bones/43/rotation = Quaternion(0.0264504, -0.0156459, 0.00364307, 0.999521)
bones/44/rotation = Quaternion(0.0177269, -0.00738805, 0.00352583, 0.999809)
bones/45/rotation = Quaternion(0.0163249, -0.101496, -0.0224534, 0.994449)
bones/46/rotation = Quaternion(0.013309, 0.00475577, 0.00254916, 0.999897)
bones/47/rotation = Quaternion(-0.339543, 0.80284, 0.156695, 0.464334)
bones/48/rotation = Quaternion(0.300266, -0.768179, -0.102955, 0.556005)
bones/48/scale = Vector3(0.999528, 0.94078, 0.999902)
bones/49/rotation = Quaternion(0.0157967, -0.0273297, -0.00279448, 0.999498)
bones/50/rotation = Quaternion(-0.10299, -0.124062, -0.0319912, 0.986397)
bones/51/rotation = Quaternion(0.00283176, -0.0673233, -0.0167976, 0.997586)
bones/52/rotation = Quaternion(4.4167e-05, 0.0252862, 0.00632252, 0.99966)
bones/53/position = Vector3(-0.382348, 2.65313, 0.0691851)
bones/53/rotation = Quaternion(-0.316496, 0.918721, 0.135751, 0.193271)
bones/54/rotation = Quaternion(0.0876127, -0.391459, -0.00850134, 0.915976)
bones/55/position = Vector3(-0.268104, 2.47949, 0.0143003)
bones/55/rotation = Quaternion(-0.0192046, 0.272242, 0.0676963, 0.959652)
bones/55/scale = Vector3(1.01041, 1.42858, 1)
bones/56/position = Vector3(-1.16919, -3.89372, 0.186876)
bones/56/rotation = Quaternion(-0.0330695, -0.137583, -0.0208516, 0.989719)

[node name="MuzzlePosition" type="Marker3D" parent="Armature/Skeleton3D/Cube_001" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 8.35187e-23, 0, 1, -1, 3.15359, -4.37722e-08)

[node name="MuzzleFlash" type="Sprite3D" parent="Armature/Skeleton3D/Cube_001/MuzzlePosition" index="0"]
transform = Transform3D(4.75976, -3.89319e-07, 0, 0, 1.9466e-07, 1, 4.16111e-07, 4.45329, -4.37114e-08, 0.249041, 0, -0.532138)
billboard = 1
texture_filter = 0
texture = ExtResource("3_avm4x")

[node name="SpotLight3D" type="SpotLight3D" parent="Armature/Skeleton3D/Cube_001/MuzzlePosition/MuzzleFlash" index="0"]
transform = Transform3D(-0.210095, 1.8367e-08, -1.8367e-08, 1.9631e-08, 0.224553, -1.96311e-08, 8.74227e-08, -8.7423e-08, -1, 0, 0, 0)
light_energy = 2.939
shadow_enabled = true
spot_range = 417.0
spot_angle = 22.9062

[node name="OmniLight3D" type="OmniLight3D" parent="Armature/Skeleton3D/Cube_001/MuzzlePosition/MuzzleFlash/SpotLight3D" index="0"]
omni_range = 18.0

[node name="AnimationPlayer" parent="." index="1"]
playback_default_blend_time = 0.2
speed_scale = -1.345

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeStateMachine_o28bo")
anim_player = NodePath("../AnimationPlayer")
